test-cases/negative/test_085_function_wrong_arity.lay
# negative test: calling function with wrong number of arguments
# expected: type checker should catch this

define function add that takes x and y and returns Number
  return x plus y

call add with 5


